samples/_failures_safe/1761656833_a78955_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36bb5992.c: In function ‘main’:
./samples/SAFE/__tmp_36bb5992.c:150:13: error: expected declaration or statement at end of input
  150 |             }
      |             ^
./samples/SAFE/__tmp_36bb5992.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_36bb5992.c:150:13: error: expected declaration or statement at end of input
